Sat May 22 06:46:45 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c: revert FIBER_USE_NATIVE feature.
	i.e. r27635, r27643, r27646, r27682, r27701

Fri May 21 23:46:43 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_invoke): merged from trunk (r27922).
	  raise NoMethodError when COM method is not found.

	* test/win32ole/test_win32ole.rb (test_no_method_error): ditto.

Fri May 21 19:11:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/nkf/nkf.c (rb_nkf_convert, rb_nkf_guess): check too huge
	  string.

Thu May 20 22:19:37 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (rb_f_caller): update rdoc.  a patch from Nobuhiro IMAI
	  <nov at yo.rim.or.jp> in [ruby-dev:41348].

Thu May 20 22:17:24 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm.c (vm_backtrace_each): now takes an init function to distinguish
	  an empty stack from out of stack.  [ruby-dev:41366]

	* vm_eval.c (print_backtrace, rb_thread_backtrace): ditto.

Wed May 19 22:48:06 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: mswin/mingw ruby has socketpair(), but it's
	  not exist as such name in ruby static library, so mkmf.rb cannot
	  find it.

Wed May 19 20:09:38 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (rb_f_caller): return [] instead of nil when the function
	  is called on toplevel.  [ruby-dev:41348]

Wed May 19 20:06:11 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* iseq_compile_each (NODE_DEFINED): put nil first to fix stack
	  consistency.  [ruby-core:30293]
	  Now, lfinish[0] of defined_expr seems not to be used.  Refactoring
	  may be needed.

Wed May 19 17:22:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.h (RUBY_VERSION_TEENY): revert to API version 1.9.1.

Wed May 19 10:46:05 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (argv_size): merged into join_argv() to maintain the
	  agreement with it.  removed code has a calclulation bug.
	  fixed [Bug#2388]
