@@ -1,3 +1,8 @@
+Sun May 23 17:16:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/ruby.h (CONST_ID_CACHE, rb_intern_const): suppress
+	  warnings with -Wconversion.
+
 Sat May 22 06:46:45 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* cont.c: revert FIBER_USE_NATIVE feature.
